# ephapsys-sdk

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: samples-ci.yml
docs/: MAINTAINERS_CI.md
samples/: README.md
samples/agents/helloworld/: .env.example  .env.gcp.example  .env.prod  .env.stag  .last_gcp_instance  GCP.md  README.md  check_gcp.sh  check_iam_role.sh  detach_gcp.sh  helloworld_agent.py  provision_kms_key.sh  push.sh  quickstart.sh  reattach_gcp.sh  run.sh  run_gcp.sh  run_local.sh
samples/agents/robot/: .env.example  .env.gcp.example  GCP.md  README.md  VJEPA_INTEGRATION_PLAN.md  check_gcp.sh  push.sh  push_gcp.sh  push_local.sh  quickstart.sh  requirements.txt  requirements_brain.txt  robot_agent.py  robot_arch.py  robot_body.py  robot_brain.py  robot_brain_server.py  robot_channel.py  robot_ci_mock.py  robot_contracts.py  robot_executors.py  robot_face.py  robot_remote_agent.py  robot_remote_body.py  robot_state.py  run.sh  run_brain_server.sh  run_ci_mock.sh  run_gcp.sh  run_local.sh
samples/ci/: run_samples_ci.sh
samples/modulators/: Dockerfile.gcp  README.md  gcp.env.example  modulate_gcp_common.sh  modulate_local_common.sh  requirements.gcp.txt
samples/modulators/audio/: .env.example  README.md  modulate.sh  modulate_gcp.sh  train_audio.py
samples/modulators/embedding/: .env.example  MODEL_ID  README.md  modulate.sh  modulate_gcp.sh  train_embedding.py
samples/modulators/language/: .env.example  Dockerfile  README.md  check_remote_metrics_streams.sh  check_telemetry.sh  ecm_train_cuda.json  gcp.env.example  modulate_gcp.sh  modulate_gcp_bad.sh  modulate_gcp_tmux.sh  modulate_local.sh  requirements.txt  train_language.py
samples/modulators/language/tests/: run_test_eval.sh  test_evaluation.py
samples/modulators/rl/: README.md  modulate.sh  modulate_gcp.sh  train_rl.py
samples/modulators/stt/: .env.example  MODEL_ID  README.md  modulate.sh  modulate_gcp.sh  train_stt.py
samples/modulators/tts/: .env.example  MODEL_ID  README.md  modulate.sh  modulate_gcp.sh  train_tts.py
samples/modulators/vision/: .env.example  MODEL_ID  README.md  modulate.sh  modulate_gcp.sh  train_vision.py
samples/modulators/world/: .env.example  README.md  modulate.sh  modulate_gcp.sh  train_world.py
scripts/: README.md  cleanup-sdk.sh  publish-sdk.sh  setup.sh  use-sdk.sh
sdk/: README.md
sdk/python/: README.md  conftest.py  pyproject.toml  test_a2a_broadcast.py  test_a2a_client.py  test_a2a_cluster_info.py  test_a2a_cluster_methods.py  test_a2a_process_inbox.py  test_a2a_verify.py  test_auth_bootstrap.py  test_cluster_auto_join.py  test_http_errors.py  test_indispensability.py  test_message_journal.py  test_policy_helpers.py
sdk/python/ephapsys/: __init__.py  a2a.py  agent.py  auth.py  cli.py  digests.py  ecm.py  http.py  journal.py  manifest.py  modulation.py  pki.py  provision.py  runtime.py  session.py  storage.py
sdk/python/ephapsys/crypto/: hpke.py  tpm.py
