[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ephapsys"
version = "0.2.11"
description = "Ephapsys helps you empower and govern AI agents."
readme = "README.md"
authors = [
    { name = "Ephapsys", email = "hello@ephapsys.com" },
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=42.0.0",
    "tpm2-pytss>=2.3.0; sys_platform == 'linux'",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "numpy>=1.23",
    "torch>=2.0.0",
    "transformers>=4.33.0",
    "datasets>=2.14.0,<3.0.0",
    "evaluate>=0.4.1",
    "bert-score>=0.3.13",
    "sacrebleu>=2.3.1",
    "rouge-score>=0.1.2",
    "jiwer>=3.0.3",
    "librosa>=0.10.2.post1",
    "soundfile>=0.12.1",
    "psutil>=5.9.0",
    "google-cloud-kms>=2.21.0",
]

[project.license]
text = "Apache 2.0"

[project.optional-dependencies]
tpm = [
    "tpm2-pytss>=2.3.0",
]

[project.urls]
Homepage = "https://ephapsys.com"

[project.scripts]
ephapsys = "ephapsys.cli:main"
